--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.100.0
-uvicorn==0.34.0
-pydantic==2.10.1
-mysql-connector-python==8.1.0
-typing==3.7.4.3
+fastapi==0.95.2
+uvicorn==0.22.0
+pydantic==1.10.7
+pymysql==1.0.3
+python-dotenv==1.0.0
